--- a/app/src/main/res/layout/item_direcciones_cardview.xml
+++ b/app/src/main/res/layout/item_direcciones_cardview.xml
@@ -3,17 +3,19 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="15sp">
+    android:background="@drawable/bacg_card"
+    android:layout_margin="10sp">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:gravity="center_vertical">
+        android:gravity="center_vertical"
+        android:background="@drawable/bacg_card">
         <ImageView
-            android:layout_width="75sp"
-            android:layout_height="75sp"
+            android:layout_width="60sp"
+            android:layout_height="60sp"
             android:src="@drawable/icon_check"
-            android:padding="20sp">
+            android:padding="10sp">
         </ImageView>
         <LinearLayout
             android:layout_width="match_parent"
