--- a/app/src/main/res/layout/activity_restaurante_uni.xml
+++ b/app/src/main/res/layout/activity_restaurante_uni.xml
@@ -173,9 +173,75 @@
                                     android:textStyle="bold"
                                     android:paddingBottom="5sp"/>
 
-                            <GridView
+                            <GridLayout
                                 android:layout_width="match_parent"
-                                android:layout_height="match_parent" />
+                                android:layout_height="match_parent"
+                                android:alignmentMode="alignMargins"
+                                android:padding="14sp"
+                                android:columnCount="3">
+
+                                <Button
+                                    android:layout_width="80sp"
+                                    android:layout_height="40sp"
+                                    android:layout_marginStart="10sp"
+                                    android:layout_marginEnd="10sp"
+                                    android:layout_marginTop="10sp"
+                                    android:backgroundTint="#F6F6F6"
+                                    android:text="Miercoles"
+                                    android:textColor="@color/black"
+                                    android:textSize="9sp"/>
+                                <Button
+                                    android:layout_width="80sp"
+                                    android:layout_height="40sp"
+                                    android:layout_marginStart="10sp"
+                                    android:layout_marginEnd="10sp"
+                                    android:layout_marginTop="10sp"
+                                    android:backgroundTint="#F6F6F6"
+                                    android:text="Miercoles"
+                                    android:textColor="@color/black"
+                                    android:textSize="9sp"/>
+                                <Button
+                                    android:layout_width="80sp"
+                                    android:layout_height="40sp"
+                                    android:layout_marginStart="10sp"
+                                    android:layout_marginEnd="10sp"
+                                    android:layout_marginTop="10sp"
+                                    android:backgroundTint="#F6F6F6"
+                                    android:text="Miercoles"
+                                    android:textColor="@color/black"
+                                    android:textSize="9sp"/>
+                                <Button
+                                    android:layout_width="80sp"
+                                    android:layout_height="40sp"
+                                    android:layout_marginStart="10sp"
+                                    android:layout_marginEnd="10sp"
+                                    android:layout_marginTop="10sp"
+                                    android:backgroundTint="#F6F6F6"
+                                    android:text="Miercoles"
+                                    android:textColor="@color/black"
+                                    android:textSize="9sp"/>
+                                <Button
+                                    android:layout_width="80sp"
+                                    android:layout_height="40sp"
+                                    android:layout_marginStart="10sp"
+                                    android:layout_marginEnd="10sp"
+                                    android:layout_marginTop="10sp"
+                                    android:backgroundTint="#F6F6F6"
+                                    android:text="Miercoles"
+                                    android:textColor="@color/black"
+                                    android:textSize="9sp"/>
+                                <Button
+                                    android:layout_width="80sp"
+                                    android:layout_height="40sp"
+                                    android:layout_marginStart="10sp"
+                                    android:layout_marginEnd="10sp"
+                                    android:layout_marginTop="10sp"
+                                    android:backgroundTint="#F6F6F6"
+                                    android:text="Miercoles"
+                                    android:textColor="@color/black"
+                                    android:textSize="9sp"/>
+
+                            </GridLayout>
 
 
                         </LinearLayout>
@@ -582,6 +648,11 @@
                         </LinearLayout>
 
                     </LinearLayout>
+
+                    <FrameLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="300sp"
+                        android:id="@+id/frame_layout"/>
 
                     <ImageView
                         android:layout_width="match_parent"
